CSS issue fixed - horizontal scroll bar displayed while typing messages.

--- a/public/styles/default.css
+++ b/public/styles/default.css
@@ -298,7 +298,7 @@
 .chat-canvas .message-list .message
 {
 	list-style: none;
-	overflow: auto;
+	overflow: none;
 	clear:both;
 	padding: 0 8px 8px 8px;
 }
